<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".cameraFragment.CameraFragment">


        <com.wonderkiln.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:keepScreenOn="true"
            camerakit:ckFlash="auto"
            camerakit:ckCropOutput="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonCapture"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:contentDescription="@string/button_capture"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonFacing"
            app:layout_constraintStart_toEndOf="@+id/buttonFlash"
            app:layout_constraintTop_toBottomOf="@+id/camera" />

        <ImageButton
            android:id="@+id/buttonFlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:contentDescription="@string/button_flash"
            android:src="@drawable/ic_flash_auto"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
            app:layout_constraintEnd_toStartOf="@+id/buttonCapture"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonCapture" />

        <ImageButton
            android:id="@+id/buttonFacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="@string/button_facing"
            android:src="@drawable/ic_facing"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCapture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCapture"
            app:layout_constraintTop_toTopOf="@+id/buttonCapture" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>